# daffi

./: .gitignore  222.py  404.html  MANIFEST.in  Makefile  README.md  app.wasm  build.zig  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: publish_docs.yml  test_and_validate.yml  test_and_validate_staging.yml  wheels.yml
.zig-cache/o/199f3bfb41c3903c8b51babe3fba3776/: cimport.h.d
.zig-cache/o/1ecb755ab6149c853ac24cd7fdf720b6/: cimport.h
.zig-cache/o/20c888d5e690857e76ef2111e8807d6f/: cimport.zig
.zig-cache/o/675bfa2398de830f2da0e9d1c3d607ed/: cimport.zig
.zig-cache/o/94d69e16b5cf10bd4bc2636c9fc82626/: cimport.zig
.zig-cache/o/98331783ab05ad24dc0bc87165e1666c/: cimport.zig
.zig-cache/o/9d261e6921831cd684e0e93a3d42963b/: cimport.zig
.zig-cache/o/af3ebbd3c75587543de681e1123da821/: cimport.h.d
.zig-cache/o/b9a222ce8e956609ffce3ff8f5cacd56/: app.wasm
.zig-cache/o/c054e398faf631060afb11931b420312/: cimport.h.d
.zig-cache/o/d6d5e3e454b7b935086046982b52133d/: cimport.zig
.zig-cache/o/fb47ed3a0af924dfed83456d90491fa1/: cimport.zig
.zig-cache/o/fded0a4c8d7e16476933b9bc84ee8ee7/: cimport.zig
architecture/: index.html
core/: Client.zig  Server.zig  cffi.zig  core.zig  log.zig  misc.zig  network.zig  serde.zig  store.zig  wasm.zig
core/cffi/: client.zig  server.zig
core/handlers/: handlers.zig  message_handler.zig
core/network/: ClientConnection.zig  ServerConnection.zig  WasmConnection.zig  WebConnection.zig  connection.zig  posix_net.zig  tls.zig
core/network/web/: buffer.zig  framing.zig  handshake.zig  reader.zig
core/repository/: ChannelsMapper.zig  TasksQueue.zig
core/serde/: handshake.zig  message.zig  message_pool.zig  slices.zig
core/store/: ChannelsMapper.zig  ClientMessageStore.zig  TasksQueue.zig
daffi/: __init__.py  _bindings.py  _rpc_proxy.py  _serialization.py  _signals.py  _task_dispatcher.py  _wakeup.py  app.py  bindings.py  exceptions.py  rpc_proxy.py  serialization.py  signals.py  task_dispatcher.py
daffi/aio/: __init__.py  _rpc_proxy.py  _task_dispatcher.py  app.py
daffi/registry/: __init__.py  _callback.py  _executor_registry.py  executor_registry.py
daffi/utils/: colors.py  logger.py  misc.py
dfcore.egg-info/: PKG-INFO
docs/: architecture.md  getting-started.md  index.md  js-client.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/usage/: aio.md  call-styles.md  events.md  router.md  serialization.md  service.md  tls.md  unix-sockets.md
examples/js/: README.md  daffi-client.js
examples/js/01_service_json/: 1_service.py  index.html
examples/js/02_service_msgpack/: index.html
examples/js/03_router_json/: index.html
examples/js/04_router_msgpack/: index.html
examples/router/: README.md
examples/router/01_rpc/: 1_router.py  2_worker.py  3_caller.py
examples/router/02_cast/: 1_router.py  2_worker.py  3_caller.py
examples/router/03_bidirectional/: 1_router.py  2_node_b.py  3_node_a.py
examples/router/04_serde_pickle/: 1_router.py  2_worker.py  3_caller.py  models.py
examples/router/05_serde_json/: 1_router.py  2_worker.py  3_caller.py
examples/router/06_serde_opaque/: 1_router.py  2_worker.py  3_caller.py
examples/router/07_serde_msgpack/: 1_router.py  2_worker.py  3_caller.py
examples/router/08_events/: 1_router.py  2_worker.py  3_caller.py
examples/router/09_wait_for_members/: 1_router.py  2_worker.py  3_caller.py
examples/service/: README.md
examples/service/01_rpc/: 1_service.py  2_client.py
examples/service/02_cast/: 1_service.py  2_client.py
examples/service/03_class_callbacks/: 1_service.py  2_client.py
examples/service/04_serde_pickle/: 1_service.py  2_client.py  models.py
examples/service/05_serde_json/: 1_service.py  2_client.py
examples/service/06_serde_opaque/: 1_service.py  2_client.py
examples/service/07_serde_msgpack/: 1_service.py  2_client.py
examples/service/08_unix_socket/: 1_service.py  2_client.py
examples/service/09_events/: 1_service.py  2_client.py
examples/service/10_stream/: 1_service.py  2_client.py
examples/service_to_service/: README.md
examples/service_to_service/01_basic_rpc/: client.py  service.py
examples/service_to_service/02_class_callbacks/: client.py  service.py
examples/service_to_service/03_no_return_stream/: client.py  service.py
examples/service_to_service/04_error_handling/: client.py  service.py
examples/service_to_service/05_tls/: client_no_verify.py  client_verified.py  service.py  test_wss.py
examples/service_to_service/06_call_cast/: client.py  service.py
examples/via_router/: README.md
examples/via_router/01_basic/: caller.py  router.py  worker.py
examples/via_router/02_multi_worker/: caller.py  math_worker.py  router.py  text_worker.py
examples/via_router/03_broadcast/: caller.py  reverse_text_worker.py  router.py  upper_text_worker.py
examples/via_router/04_bidirectional/: node_a.py  node_b.py  router.py
examples/via_router/05_call_all_cast_all/: caller.py  router.py  worker.py
getting-started/: index.html
js-client/: app.js  app.wasm  daffi.js  index.html
js-client/test/: index.html
scripts/: cross_win_wheel.py
search/: search_index.json
tests/: conftest.py  perf_benchmark.py  rpyc_benchmark.py
tests/integration/: conftest.py  test_cast.py  test_chunked.py  test_concurrency.py  test_duplicate_name.py  test_dynamic_cast.py  test_events.py  test_interruptions.py  test_many_callbacks.py  test_rpc.py  test_serde.py  test_store_overflow.py  test_timeouts.py  test_workers.py
tests/perf/: _diag_leak.py  big_message_benchmark.py  chaos_test.py  concurrency_benchmark.py  data.json  latency_nodelay_bench.py  parallel_long_tasks_benchmark.py  perf_benchmark.py  rpyc_benchmark.py  workers_benchmark.py
tests/unit/: test_callback_decorator.py  test_logger.py  test_misc.py
usage/aio/: index.html
usage/call-styles/: index.html
usage/events/: index.html
usage/router/: index.html
usage/serialization/: index.html
usage/service/: index.html
usage/tls/: index.html
usage/unix-sockets/: index.html
zig-out/lib/: app.wasm
(+85 files in other folders)
