[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daffi"
version = "3.0.0"
description = "Lightweight inter-process RPC framework with a high-performance native core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Volodymyr Boiko", email = "600apples@gmail.com" },
]
keywords = ["rpc", "ipc", "distributed", "messaging", "networking", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
msgpack = ["msgpack>=1.0"]

[project.urls]
Homepage    = "https://github.com/600apples/dafi"
Source      = "https://github.com/600apples/dafi"
"Bug Tracker" = "https://github.com/600apples/dafi/issues"

[tool.setuptools.packages.find]
include = ["daffi*"]


[tool.cibuildwheel]
# CPython 3.10 – 3.13; skip PyPy, 32-bit, and musl (Windows handled separately)
build  = "cp310-* cp311-* cp312-* cp313-*"
skip   = "pp* *i686* *musllinux*"

# Install the wheel after building to run a quick smoke test
test-command = "python -c \"import daffi; print('daffi', daffi.__version__)\""

# ── Linux ─────────────────────────────────────────────────────────────────────
[tool.cibuildwheel.linux]
archs         = ["x86_64", "aarch64"]
# Use manylinux_2_28 (AlmaLinux 8 based) — modern enough for Zig 0.16
manylinux-x86_64-image  = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

before-all = """
    # Ensure required build tools are available in the minimal manylinux image.
    # openssl-devel provides <openssl/ssl.h> needed by core/network/tls.zig.
    yum install -y curl xz openssl-devel 2>/dev/null || dnf install -y curl xz openssl-devel 2>/dev/null || true

    ARCH=$(uname -m)
    ZIG_VERSION="0.16.0"
    ZIG_TAR="zig-${ARCH}-linux-${ZIG_VERSION}.tar.xz"
    ZIG_URL="https://ziglang.org/download/${ZIG_VERSION}/${ZIG_TAR}"

    echo "Downloading Zig ${ZIG_VERSION} for ${ARCH} ..."
    curl -fL "${ZIG_URL}" -o "/tmp/${ZIG_TAR}"
    tar -xJf "/tmp/${ZIG_TAR}" -C /opt
    ln -sf "/opt/zig-${ARCH}-linux-${ZIG_VERSION}/zig" /usr/local/bin/zig
    zig version
"""

# auditwheel repair bundles libssl/libcrypto into the wheel automatically
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# ── macOS ─────────────────────────────────────────────────────────────────────
[tool.cibuildwheel.macos]
# macos-13 runner is x86_64 (Intel); macos-14 runner is arm64 (Apple Silicon).
# Each runner builds its native arch — no cross-compilation needed or wanted.
archs = ["native"]

before-all = """
    # xz is needed by BSD tar's -J flag; openssl@3 for static linking in setup.py.
    brew install xz openssl@3 || true

    # Map uname -m (arm64) to Zig's arch name (aarch64).
    RAW_ARCH=$(uname -m)
    if [ "$RAW_ARCH" = "arm64" ]; then ZIG_ARCH="aarch64"; else ZIG_ARCH="$RAW_ARCH"; fi

    ZIG_VERSION="0.16.0"
    ZIG_TAR="zig-${ZIG_ARCH}-macos-${ZIG_VERSION}.tar.xz"
    ZIG_URL="https://ziglang.org/download/${ZIG_VERSION}/${ZIG_TAR}"

    echo "Downloading Zig ${ZIG_VERSION} for ${ZIG_ARCH} ..."
    curl -fL "${ZIG_URL}" -o "/tmp/${ZIG_TAR}"
    tar -xJf "/tmp/${ZIG_TAR}" -C /tmp
    sudo ln -sf "/tmp/zig-${ZIG_ARCH}-macos-${ZIG_VERSION}/zig" /usr/local/bin/zig
    zig version

    # Homebrew openssl@3 .a archives can be universal2 fat binaries.
    # Zig links all slices it finds into the output dylib, producing a
    # universal2 .so that delocate --require-archs rejects.
    # Thin the archives to the native arch so the output is pure-arch.
    if [ "$RAW_ARCH" = "arm64" ]; then
        OPENSSL_LIB="/opt/homebrew/opt/openssl@3/lib"
    else
        OPENSSL_LIB="/usr/local/opt/openssl@3/lib"
    fi
    if [ -d "$OPENSSL_LIB" ]; then
        for lib in libssl.a libcrypto.a; do
            if [ -f "$OPENSSL_LIB/$lib" ]; then
                echo "lipo -info $OPENSSL_LIB/$lib: $(lipo -info $OPENSSL_LIB/$lib 2>&1)"
                lipo -thin "$RAW_ARCH" "$OPENSSL_LIB/$lib" -output "$OPENSSL_LIB/$lib" 2>/dev/null \
                    && echo "Thinned $lib to $RAW_ARCH" \
                    || echo "$lib is already thin or lipo failed (ok)"
            fi
        done
    fi
"""

# setup.py links OpenSSL statically; delocate has no external dylibs to bundle.
# -v prints exactly what delocate inspects so we can diagnose future failures.
# The cp fallback ensures the wheel is produced even if delocate errs; the
# test_command below then verifies the binary is genuinely importable.
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -v -w {dest_dir} {wheel} || (echo 'delocate failed — using cp fallback' && cp {wheel} {dest_dir}/)"


[tool.hatch.envs.docs]
skip-install = true
dependencies = [
    "mkdocs-material>=9.4",
    "mkdocs-section-index>=0.3",
]

[tool.hatch.envs.docs.env-vars]
DISABLE_MKDOCS_2_WARNING = "true"

[tool.hatch.envs.docs.scripts]
serve  = "mkdocs serve --dev-addr 127.0.0.1:8000"
build  = "mkdocs build --strict"
deploy = "mkdocs gh-deploy --force"
clean  = "rm -rf mkdocs_files"
