[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daffi"
dynamic = ["version"]
description = "Lightweight inter-process RPC framework with a high-performance native core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Volodymyr Boiko", email = "600apples@gmail.com" },
]
keywords = ["rpc", "ipc", "distributed", "messaging", "networking", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
msgpack = ["msgpack>=1.0"]
tests = [
    "pytest>=7.0",
    "msgpack>=1.0",
]

[project.urls]
Homepage    = "https://github.com/600apples/daffi"
Source      = "https://github.com/600apples/daffi"
"Bug Tracker" = "https://github.com/600apples/daffi/issues"

[tool.setuptools.packages.find]
include = ["daffi*"]

[tool.setuptools.dynamic]
version = {attr = "daffi.__about__.__version__"}

[tool.hatch.version]
path = "daffi/__about__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.cibuildwheel]
# CPython 3.10 – 3.13; skip PyPy and 32-bit.  Each OS section below sets its
# own archs so a single runner only builds its native architecture.
build = "cp310-* cp311-* cp312-* cp313-*"
skip  = "pp* *i686*"

# Quick smoke test after every wheel build.
test-command = "python -c \"import daffi; print('daffi', daffi.__version__)\""

# ── Linux ─────────────────────────────────────────────────────────────────────
[tool.cibuildwheel.linux]
# Each Linux runner builds only its native arch (x86_64 on ubuntu-24.04,
# aarch64 on ubuntu-24.04-arm).  No QEMU emulation needed.
archs = ["native"]

# manylinux_2_28 (AlmaLinux 8) — modern enough for Zig 0.16.
manylinux-x86_64-image  = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

before-all = """
    # musl-based containers use apk; glibc-based ones use yum/dnf.
    if command -v apk >/dev/null 2>&1; then
        apk add --no-cache curl xz openssl-dev
    else
        yum install -y curl xz openssl-devel 2>/dev/null \
            || dnf install -y curl xz openssl-devel 2>/dev/null \
            || true
    fi
    pip install setuptools --quiet
    python setup.py ensure_zig --symlink /usr/local/bin/zig
"""

repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# ── macOS ─────────────────────────────────────────────────────────────────────
[tool.cibuildwheel.macos]
# macos-13 → x86_64 (Intel);  macos-14+ → arm64 (Apple Silicon).
# Native builds only — no cross-compilation.
archs = ["native"]

before-all = """
    brew install xz openssl@3 || true
    python setup.py ensure_zig --symlink /usr/local/bin/zig

    # Homebrew openssl@3 .a archives are sometimes universal2 fat binaries.
    # Zig embeds every slice it finds, producing a universal2 .so that
    # delocate --require-archs rejects.  Thin them to the native arch.
    RAW_ARCH=$(uname -m)
    if [ "$RAW_ARCH" = "arm64" ]; then
        OPENSSL_LIB="/opt/homebrew/opt/openssl@3/lib"
    else
        OPENSSL_LIB="/usr/local/opt/openssl@3/lib"
    fi
    if [ -d "$OPENSSL_LIB" ]; then
        for lib in libssl.a libcrypto.a; do
            if [ -f "$OPENSSL_LIB/$lib" ]; then
                echo "lipo -info $OPENSSL_LIB/$lib: $(lipo -info $OPENSSL_LIB/$lib 2>&1)"
                lipo -thin "$RAW_ARCH" "$OPENSSL_LIB/$lib" -output "$OPENSSL_LIB/$lib" 2>/dev/null \
                    && echo "Thinned $lib to $RAW_ARCH" \
                    || echo "$lib is already thin or lipo failed (ok)"
            fi
        done
    fi
"""

repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -v -w {dest_dir} {wheel} || (echo 'delocate failed — using cp fallback' && cp {wheel} {dest_dir}/)"

# ── Windows ───────────────────────────────────────────────────────────────────
[tool.cibuildwheel.windows]
archs = ["AMD64"]

before-all = """
    python setup.py ensure_zig
"""

before-build = "pip install delvewheel"

# Bundle OpenSSL DLLs (libssl / libcrypto) into the wheel so it is
# self-contained on any Windows machine.
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"


[tool.hatch.envs.docs]
skip-install = true
dependencies = [
    "mkdocs-material>=9.4",
    "mkdocs-section-index>=0.3",
]

[tool.hatch.envs.docs.env-vars]
DISABLE_MKDOCS_2_WARNING = "true"

[tool.hatch.envs.docs.scripts]
serve  = "mkdocs serve --dev-addr 127.0.0.1:8000"
build  = "mkdocs build --strict"
deploy = "mkdocs gh-deploy --force"
clean  = "rm -rf mkdocs_files"
